--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body, html {
     justify-content: center;
     align-items: center;
     background-color: #f4f4f4;
-    background-image: url('/images/mandolin_bg.jpg');
+    background-image: url('images/mandolin.jpg');
     background-size: cover; /* Cover the entire page */
     background-position: center; /* Center the background image */
     background-repeat: no-repeat; /* Do not repeat the image */
@@ -44,7 +44,7 @@ h1, h2, h3 {
     margin: 0 10px;
     font-size: 16px;
     background-color: rgba(255, 255, 255, 0.7);
-    color: white;
+    color: rgb(0, 0, 0);
     border: none;
     border-radius: 5px;
     cursor: pointer;
